Bg Image directory changed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,10 @@ import Card from '../components/Card.astro';
 
 <Layout title="PI-Parallel Intersect">
 	<main class="text-center">
-		
-		<h1 class="text-5xl m-8">Welcome to Parallel Intersect</h1>
-		<p class="text-2xl">
+	
+
+			<h1 class="text-5xl m-8">Welcome to Parallel Intersect</h1>
+			<p class="text-2xl">
 			This website is still under construction. Check out <code ><a href="/about">about</a></code> To know more about <br />
 			<strong>Parallel Intersect</strong> and idea behind it.
 		</p>
@@ -31,12 +32,13 @@ import Card from '../components/Card.astro';
 				href="https://discord.gg/QvPTddkA6H"
 				title="Community"
 				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-		<div class="h-1/2 w-1/2 bg-cover absolute right-1/4 opacity-50 top-0">
-		<img
-			aria-hidden="true"
-			src="../../public/logo.svg"
+				/>
+			</ul>
+
+			<div class="h-1/2 w-1/2 bg-cover absolute right-1/4 opacity-50 top-0 -z-50">
+				<img
+				aria-hidden="true"
+			src="logo.svg"
 			/>
 		</div>
 	</main>
