--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,7 +8,7 @@ interface Props {
 const { href, title, body } = Astro.props;
 ---
 
-<section class="border border-2 border-black m-8 p-8 rounded-lg text-center">
+<section class="border border-black m-8 p-8 rounded-lg text-center">
 	<a href={href}>
 		<h2 class="text-2xl">
 			{title}
