--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,20 +14,20 @@ import Card from '../components/Card.astro';
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="/docs"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+			href="/project/"
+			title="Projects"
+			body="Checkout some of the projects our team is working on right now."
 			/>
 			<Card
-				href="/project/markitdown"
-				title="Mark It Down"
-				body="Just a mark down editor to write your documentation."
+			href="/market"
+			title="Market Place"
+			body="Buy Digital assets at affordable price."
 			/>
 			<Card
-				href="https:backr00m.vercel.app"
-				title="Backroom"
-				body="A Web3 based backrooms game."
-				/>
+				href="/game"
+				title="Games"
+				body="Checkout Games created by us."
+			/>
 				<Card
 				href="https://discord.gg/QvPTddkA6H"
 				title="Community"
@@ -35,7 +35,7 @@ import Card from '../components/Card.astro';
 				/>
 			</ul>
 
-			<div class="h-1/2 w-1/2 bg-cover absolute right-1/4 opacity-50 top-0 -z-50">
+			<div class="h-1/2 w-1/2 bg-cover absolute right-1/4 opacity-50 top-0 -z-10">
 				<img
 				aria-hidden="true"
 			src="logo.svg"
