--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
+
 import Card from '../components/Card.astro';
 ---
 
 <Layout title="PI-Parallel Intersect">
-	<main class="text-center">
-	
 
-			<h1 class="text-5xl m-8">Welcome to Parallel Intersect</h1>
+	<main class="text-center mt-20">
+				<h1 class="text-5xl m-8">Welcome to Parallel Intersect</h1>
 			<p class="text-2xl">
 			This website is still under construction. Check out <code ><a href="/about">about</a></code> To know more about <br />
 			<strong>Parallel Intersect</strong> and idea behind it.
@@ -35,12 +35,13 @@ import Card from '../components/Card.astro';
 				/>
 			</ul>
 
-			<div class="h-1/2 w-1/2 bg-cover absolute right-1/4 opacity-50 top-0 -z-10">
+			<div class="h-1/2 w-1/2 bg-cover absolute right-1/4 opacity-50 top-20 -z-10">
 				<img
 				aria-hidden="true"
 			src="logo.svg"
 			/>
 		</div>
 	</main>
+
 </Layout>
 
