--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,9 @@
-<footer class="bottom-0 p-10 bg-gray-700 w-full">
+<footer class="relative bottom-0 p-10 bg-gray-700 w-full">
 
     <div class="h-2 w-10">
         <img
         aria-hidden="true"
-    src="logo.svg"
+    src="/logo.svg"
     />
 </div>
 
