--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,12 +8,13 @@
 ---
 
 <header class="fixed bg-gray-300 w-full top-0 font-bold">
-    <div class="text-2xl px-2 absolute top-2 m-auto left-2">
+    <a href="/" class="text-2xl px-2 absolute top-2 m-auto left-2">
+        
         <div class="w-10 inline-block">
-            <img src="logo.svg" alt="PI">
+            <img src="/logo.svg" alt="PI">
         </div>
         <h1 class="inline-block p-1 align-top">Parallel Intersect</h1>
-    </div>
+    </a>
     <nav class="p-4 flex flex-row items-center justify-end sm:visible invisible">
         <div class="px-2">
             <a href="/blog">Blog</a>
@@ -27,9 +28,9 @@
         <div class="px-2">
             <a href="/project">Projects</a>
         </div>
-        <!-- <div class="px-2">
-            <a href="/project">Join Community</a>
-        </div> -->
+        <div class="px-2">
+            <a href="https://discord.gg/QvPTddkA6H">Join Community</a>
+        </div>
     </nav>
     <button class="absolute right-2 top-2 sm:invisible visible" type="button" id="show-nav">=</button>
 </header>
