--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,8 +20,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		
 		<Header title='PI'/>
-		<slot />
-		<Footer/>
+		<main class="mt-20"> 
+			<slot />
+		</main>
+			<Footer/>
 	</body>
 </html>
