Added Google Verification

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,11 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="we make impossible,possible" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="logo.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta name="google-site-verification" content="UNYUQNjSQ3VOpW40uzfeStDI5rCRGTfTVE3zCZkJb2o" />
+		<!-- <meta name="generator" content={Astro.generator} /> -->
 		<title>{title}</title>
 	</head>
 	<body>
