--- a/src/pages/game.astro
+++ b/src/pages/game.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 <Layout title="Games-PI">
 
-    <h1 class="text-5xl">Games</h1>
+    <h1 class="text-5xl text-center">Games</h1>
 
     
 </Layout>
