--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,16 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+.no-tailwind {
+  all: unset; /* Resets all styles */
+}
+
+@layer base {
+  h1 {
+    @apply text-3xl font-bold; /* Customize as needed */
+  }
+
+  h2 {
+    @apply text-2xl font-semibold; /* Customize as needed */
+  }
+}
